[tool.black]
line-length = 79
skip-string-normalization = true
target-version = ['py38']

[tool.doks]
auto = true

[tool.poetry]
name = "nmr"
version = "0.9.0"
description = "🔢 name all canonical things 🔢"
authors = ["Tom Ritchford <tom@swirly.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.8"
datacls = "^4.5.0"
dtyper = "^2.0.0"
lat-lon-parser = "^1.3.0"
typer = "^0.7.0"
xmod = "^1.3.2"
chess = "^1.9.3"

[tool.poetry.group.dev.dependencies]
coverage = "^6.5.0"
doks = "^1.0.1"
flake8 = "^5.0.4"
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
