[project]
name = "nmr"
version = "0.9.2"
description = "ðŸŒ Name all canonical things ðŸŒ"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.9,<4"
readme = "README.md"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "dtyper>=2.0.0,<3",
    "lat-lon-parser>=1.3.0,<2",
    "typer>=0.7.0,<0.8",
    "chess>=1.9.3,<2",
    "semver>=3.0.2,<4",
]

[project.scripts]
nmr = "nmr.__main__:main"

[tool.doks]
auto = true

[dependency-groups]
dev = [
    "coverage>=6.5.0,<7",
    "pytest>=7.2.0,<8",
    "ruff>=0.8.2,<0.9",
    "mypy>=1.13.0,<2",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"
[tool.coverage.run]
branch = true
source = ["num_name"]

[tool.coverage.report]
fail_under = "100"
skip_covered = true
exclude_lines = ["pragma: no cover", "if False:", "if __name__ == .__main__.:", "raise NotImplementedError"]

[tool.mypy]
strict = true
